ToDoApp/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-service
  namespace: project
spec:
  type: ClusterIP
  selector:
    app: todo-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
